--- a/総合ハンズオン/総合ハンズオン4/network-stack-template.yaml
+++ b/総合ハンズオン/総合ハンズオン4/network-stack-template.yaml
@@ -187,6 +187,14 @@ Resources:
         - Key: Name
           Value: !Sub "${EnvironmentName} RDS Subnet Group"
 
+  #----------------------
+  # Route 53ホストゾーン作成
+  #----------------------
+  HostedZone:
+    Type: AWS::Route53::HostedZone
+    Properties:
+      Name: aws-dev-lab-demo.shop
+
 #----------------------
 # エクスポート
 #----------------------
@@ -214,3 +222,9 @@ Outputs:
     Description: "RDS Subnet Group Name"
     Export:
       Name: !Sub "${EnvironmentName}-RdsSubnetGroupId"
+
+  HostedZoneId:
+    Description: "The HostedZone ID"
+    Value: !Ref HostedZone
+    Export:
+      Name: !Sub "${EnvironmentName}-HostedZoneId"
